# tubesage

./: Dockerfile  DockerfileOllama  DockerfileStreamlit  README.md  docker-compose.yml  pyproject.toml
data/: transcript_VMj-3S1tku0&t.txt
streamlit-ui/: app.py
tests/clients/: test_ollama_client.py  test_youtube_transcript_client.py
tests/util/: test_extract_video_id.py
tubesage/: app.py
tubesage/clients/: embbeding_client.py  llm_client.py  vector_db.py  video_transcript.py
tubesage/controllers/: invoke_llm_controller.py  transcribe_video_controller.py
tubesage/decorators/: require_auth.py
tubesage/models/: youtube_transcript.py
tubesage/routes/: invoke_llm_route.py  transcribe_video_route.py
tubesage/services/: qa_engine.py  text_splitter.py
tubesage/util/: extract_video_id.py
